LWCQuickStart/force-app/main/default/objects/Library_Item__c/fields/BorrowedTo__c.field-meta.xml
<CustomField>
    <fullName>BorrowedTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Whom is the item borrowed to?</inlineHelpText>
    <label>Borrowed To</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Library Items</relationshipLabel>
    <relationshipName>Library_Items</relationshipName>
    <type>Lookup</type>
</CustomField>