LWCQuickStart/force-app/main/default/objects/Library_Item__c/fields/Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Item_Number__c</fullName>
    <description>Unique number for Library Items</description>
    <displayFormat>{00000}</displayFormat>
    <label>Item Number</label>
    <type>AutoNumber</type>
</CustomField>