LWCQuickStart/force-app/main/default/objects/Library_Item__c/fields/Item_Status__c.field-meta.xml
<CustomField>
    <fullName>Item_Status__c</fullName>
    <description>Shows status of the item</description>
    <label>Item Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Borrowed</fullName>
            </value>
            <value>
                <fullName>Available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>