LWCQuickStart/force-app/main/default/objects/Library_Item__c/fields/Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Item_Type__c</fullName>
    <description>This is the different types of Items in the Library</description>
    <inlineHelpText>Select the type of Library Item</inlineHelpText>
    <label>Item Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Book</fullName>
            </value>
            <value>
                <fullName>AV Equipment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>