LWCQuickStart/force-app/main/default/objects/Library_Item__c/fields/Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Return_Date__c</fullName>
    <description>Expected return date</description>
    <label>Return Date</label>
    <type>Date</type>
</CustomField>