LWCQuickStart/force-app/main/default/objects/Library_Item__c/validationRules/isBorrowed.validationRule-meta.xml
<ValidationRule>
    <fullName>isBorrowed</fullName>
    <active>true</active>
    <description>Prevents borrowing an already checked out item</description>
    <errorConditionFormula>AND(ISPICKVAL( Item_Status__c , &quot;Borrowed&quot;),ISCHANGED(  BorrowedTo__c  ), NOT( ISCHANGED( Item_Status__c ) ) )</errorConditionFormula>
    <errorDisplayField>BorrowedTo__c</errorDisplayField>
    <errorMessage>Item cannot be borrowed, it has already been checked out.</errorMessage>
</ValidationRule>