LWCQuickStart/force-app/main/default/objects/Library_Item__c/validationRules/noBorrower.validationRule-meta.xml
<ValidationRule>
    <fullName>noBorrower</fullName>
    <active>true</active>
    <description>Prevents user from changing item status to borrowed without including the employee it is borrowed to</description>
    <errorConditionFormula>AND(  ISCHANGED( Item_Status__c ), ISPICKVAL( Item_Status__c ,  &quot;Borrowed&quot;),  ISBLANK( BorrowedTo__c ) )</errorConditionFormula>
    <errorDisplayField>BorrowedTo__c</errorDisplayField>
    <errorMessage>Please Enter the name of the Employee that borrowed the item</errorMessage>
</ValidationRule>