LWCQuickStart/force-app/main/default/objects/Library_Item__c/validationRules/notAvailable.validationRule-meta.xml
<ValidationRule>
    <fullName>notAvailable</fullName>
    <active>true</active>
    <description>Stops the user from inputting a borrower when status is available</description>
    <errorConditionFormula>AND(  NOT(ISCHANGED( Item_Status__c )) , ISPICKVAL( Item_Status__c , &quot;Available&quot;)  ,  NOT(ISBLANK( BorrowedTo__c )) )</errorConditionFormula>
    <errorDisplayField>Item_Status__c</errorDisplayField>
    <errorMessage>Item is set to Available, cannot set Borrowed To Field</errorMessage>
</ValidationRule>