LWCQuickStart/force-app/main/default/objects/Library_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Item_Type__c</columns>
    <columns>Item_Status__c</columns>
    <columns>BorrowedTo__c</columns>
    <columns>Item_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>